grammar.txt
<программа> ::= {<функция> |
<объявление переменных>;}
<main>
{<функция> |
<объявление переменных>;}

<main> ::= main'('')'’{‘<блок>’}’


<функция>::= def <тип> <идентификатор> ([<тип> < идентификатор> {,<тип> < идентификатор>}]) ‘{‘<блок>’}’

<тип> ::= int | float | char | bool | string | array

<идентификатор> ::= <буква>{<буква> | <цифра> }
<оператор> ::= ‘{‘<блок>’}’ | <if> | <for> | <while> | switch | <выражение>; | <объявление переменных>; | <pass>; | break; | continue; | <return>
<return> ::= return <выражение> ;
<блок> ::= <оператор> {<оператор>}
<if> ::= if’(‘<выражение>’)’ < оператор> [else <оператор>]

<for> ::= for’(‘<объявление переменных>; <выражение>; <выражение>’)’ <оператор>

<while> ::= while’(‘<выражение>’)’<оператор>

<switch> ::= switch’(‘<выражение>’)’’{‘case ‘(‘<литерал>’)’ <оператор> { case ‘(‘<выражение>’)’ <оператор> ‘}’

<объявление переменных> ::= <тип>  <идентификатор> [ = <выражение9>] {, <идентификатор> [ = <выражение9>]}

<выражение> ::= <выражение10>

<выражение10> ::= <выражение9> {, <выражение9> }

<выражение9> ::= <выражение8> {= <выражение8> }

<выражение8> ::= <выражение7> {‘|’ <выражение7>}

<выражение7> ::= <выражение6> {^ <выражение6>}

<выражение6> ::= <выражение5> {& <выражение5>}

<выражение5> ::= <выражение4> {== <выражение4> | <выражение> != <выражение4>}

<выражение4> ::= <выражение3> { ‘<’ <выражение3> |
<выражение3>  ‘>’ <выражение3> |
<выражение3>  ‘<=’ <выражение3> |
<выражение3>  ‘>=’ <выражение3>}

<выражение3> ::= <выражение2> {+ <выражение2> |- <выражение2> }

<выражение2> ::= <выражение1> {* <выражение1> |
/ <выражение1> |
% <выражение1>}

<выражение1> ::= [+ | - | ! | ++ | --] <выражение “крутое”>

<выражение “крутое”> ::=  <литерал> |
<строковый литерал> |
<идентификатор>  |
‘(‘<выражение “,”> ‘)’  |
‘[‘<выражение “,”> ‘]’
{<литерал> |
<строковый литерал> |
<идентификатор>  |
<вызов функции> |
‘(‘<выражение “,”> ‘)’  |
‘[‘<выражение “,”> ‘]’}

<вызов функции>::= <идентификатор> ‘(‘<выражение9> {, <выражение9>}’)’

<print> ::= print'('<выражение>')'
<scan> ::= scan'('<идентификатор>')'
